--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Workout Screen (initially hidden) -->
     <div id="workout-screen" class="container hidden">
         <div class="header">
-            <h1>Circuit Training</h1>
+            <h1>Circuits</h1>
         </div>
         
         <div class="timer-container">
