--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
         <source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3" type="audio/mp3">
     </audio>
     <audio id="exercise-end-sound" preload="auto">
-        <source src="https://assets.mixkit.co/active_storage/sfx/2870/2870-preview.mp3" type="audio/mp3">
+        <source src="./end-exercise.mp3" type="audio/mp3">
     </audio>
     <audio id="workout-complete-sound" preload="auto">
-        <source src="https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3" type="audio/mp3">
+        <source src="https://assets.mixkit.co/active_storage/sfx/213/213-preview.mp3" type="audio/mp3">
     </audio>
 
     <script src="app.js"></script>
